--- a/Package.json
+++ b/Package.json
@@ -19,6 +19,7 @@
         "autoprefixer": "^10.4.21",
         "eslint": "8.47.0",
         "eslint-config-next": "13.4.19",
+        "gh-pages": "^6.3.0",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.0.13"
     }
