--- a/Package.json
+++ b/Package.json
@@ -1,12 +1,14 @@
 {
     "name": "durakgo-privacy-policy",
     "version": "0.1.0",
+    "homepage": "https://onurds.github.io/DurakGo-Privacy/",
     "private": true,
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "lint": "react-scripts lint"
     },
     "dependencies": {
         "framer-motion": "^12.5.0",
