--- a/Package.json
+++ b/Package.json
@@ -12,9 +12,9 @@
     },
     "dependencies": {
         "framer-motion": "^12.5.0",
-        "next": "^15.2.2",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-scripts": "^5.0.1"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.16",
